--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  bloc:
+  flutter_bloc:
+  equatable:
+  amplify_flutter: ^0.6.0
+  amplify_auth_cognito: ^0.6.0
+
+
 
 dev_dependencies:
   flutter_test:
